--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task</p>
-        <button class="btn">Add Task</button>
+        <button id="save-task" class="btn">Add Task</button>
     </header>
 
 
@@ -21,7 +21,7 @@
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
 
-            <ul class="task-list">
+            <ul id="tasks-to-do" class="task-list">
                 <li class="task-item">Adding task soon!</li>
             </ul>
         </section>
