--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
 <body>
     <header>
         <h1 class="page-title">Taskinator</h1>
+
         <p>Click the button below to add a new task</p>
-        <button id="save-task" class="btn">Add Task</button>
+
+        <form id="task-form">
+            <div class="form-group">
+                <input type="text" name="task-name" placeholder="Enter Task Name" />
+            </div>
+
+            <div class="form-group" >
+                <select name="task-type" class="select-dropdown">
+                    <option value="" disabled selected>Pick a task type</option>
+                    <option value="Print">Urgent</option>
+                    <option value="Web">Soon</option>
+                    <option value="Mobile">Eventually</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <button class="btn" id="save-task" type="submit">Add Task</button>
+            </div>
+        </form>
     </header>
 
 
@@ -21,9 +40,7 @@
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
 
-            <ul id="tasks-to-do" class="task-list">
-                <li class="task-item">Adding task soon!</li>
-            </ul>
+            <ul id="tasks-to-do" class="task-list"></ul>
         </section>
     </main>
 
