create list item with appropriate values and append them to main task list

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="form-group" >
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
-                    <option value="Print">Urgent</option>
-                    <option value="Web">Soon</option>
-                    <option value="Mobile">Eventually</option>
+                    <option value="Urgent">Urgent</option>
+                    <option value="Soon">Soon</option>
+                    <option value="Eventually">Eventually</option>
                 </select>
             </div>
 
